use OneHotEncoder instead of get_dummies

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### The Dataset\n",
     "\n",
-    "Info provided when I downloaded it was:\n",
+    "Info provided when I [downloaded it](https://college.cengage.com/mathematics/brase/understandable_statistics/7e/students/datasets/mlr/frames/frame.html) was:\n",
     "\n",
     "Thunder Basin Antelope Study\n",
     "\n",
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -114,7 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "winter_severity_df = pd.get_dummies(antelope_df[\"winter_severity_index\"].apply(int))\n",
+    "ohe = OneHotEncoder(categories=[[1,2,3,4,5]])\n",
+    "antelope_df[\"winter_severity_index\"] = antelope_df[\"winter_severity_index\"].apply(int).astype('category')\n",
+    "winter_severity_ohe_array = ohe.fit_transform(antelope_df[[\"winter_severity_index\"]]).toarray()\n",
+    "winter_severity_df = pd.DataFrame(winter_severity_ohe_array,columns=ohe.categories_[0])\n",
+    "\n",
     "antelope_df = antelope_df.join(winter_severity_df)\n",
     "antelope_df = antelope_df.drop(\"winter_severity_index\", axis=1)"
    ]
@@ -170,11 +175,11 @@
        "      <td>9.2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -182,11 +187,11 @@
        "      <td>8.7</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -194,11 +199,11 @@
        "      <td>7.2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -206,11 +211,11 @@
        "      <td>8.5</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -218,11 +223,11 @@
        "      <td>9.6</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -230,11 +235,11 @@
        "      <td>6.8</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -242,11 +247,11 @@
        "      <td>9.7</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -254,11 +259,11 @@
        "      <td>7.9</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,15 +280,15 @@
        "6                3.4                        9.7                  0   \n",
        "7                2.1                        7.9                  1   \n",
        "\n",
-       "   high_precipitation  1  2  3  4  5  \n",
-       "0                   1  0  1  0  0  0  \n",
-       "1                   0  0  0  1  0  0  \n",
-       "2                   0  0  0  0  1  0  \n",
-       "3                   1  0  1  0  0  0  \n",
-       "4                   1  0  0  1  0  0  \n",
-       "5                   0  0  0  0  0  1  \n",
-       "6                   1  1  0  0  0  0  \n",
-       "7                   0  0  0  1  0  0  "
+       "   high_precipitation    1    2    3    4    5  \n",
+       "0                   1  0.0  1.0  0.0  0.0  0.0  \n",
+       "1                   0  0.0  0.0  1.0  0.0  0.0  \n",
+       "2                   0  0.0  0.0  0.0  1.0  0.0  \n",
+       "3                   1  0.0  1.0  0.0  0.0  0.0  \n",
+       "4                   1  0.0  0.0  1.0  0.0  0.0  \n",
+       "5                   0  0.0  0.0  0.0  0.0  1.0  \n",
+       "6                   1  1.0  0.0  0.0  0.0  0.0  \n",
+       "7                   0  0.0  0.0  1.0  0.0  0.0  "
       ]
      },
      "execution_count": 7,
@@ -348,8 +353,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.881\n",
       "Model:                            OLS   Adj. R-squared:                  0.862\n",
       "Method:                 Least Squares   F-statistic:                     44.56\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):           0.000547\n",
-      "Time:                        17:07:09   Log-Likelihood:                 2.2043\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):           0.000547\n",
+      "Time:                        18:43:29   Log-Likelihood:                 2.2043\n",
       "No. Observations:                   8   AIC:                           -0.4086\n",
       "Df Residuals:                       6   BIC:                           -0.2498\n",
       "Df Model:                           1                                         \n",
@@ -420,8 +425,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.888\n",
       "Model:                            OLS   Adj. R-squared:                  0.844\n",
       "Method:                 Least Squares   F-statistic:                     19.88\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):            0.00417\n",
-      "Time:                        17:09:09   Log-Likelihood:                 2.4459\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):            0.00417\n",
+      "Time:                        18:43:29   Log-Likelihood:                 2.4459\n",
       "No. Observations:                   8   AIC:                             1.108\n",
       "Df Residuals:                       5   BIC:                             1.346\n",
       "Df Model:                           2                                         \n",
@@ -495,8 +500,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.888\n",
       "Model:                            OLS   Adj. R-squared:                  0.844\n",
       "Method:                 Least Squares   F-statistic:                     19.88\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):            0.00417\n",
-      "Time:                        17:10:18   Log-Likelihood:                 2.4459\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):            0.00417\n",
+      "Time:                        18:43:30   Log-Likelihood:                 2.4459\n",
       "No. Observations:                   8   AIC:                             1.108\n",
       "Df Residuals:                       5   BIC:                             1.346\n",
       "Df Model:                           2                                         \n",
@@ -613,8 +618,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.938\n",
       "Method:                 Least Squares   F-statistic:                     22.15\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):             0.0438\n",
-      "Time:                        17:34:26   Log-Likelihood:                 9.8065\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):             0.0438\n",
+      "Time:                        18:43:30   Log-Likelihood:                 9.8065\n",
       "No. Observations:                   8   AIC:                            -7.613\n",
       "Df Residuals:                       2   BIC:                            -7.136\n",
       "Df Model:                           5                                         \n",
@@ -686,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -698,8 +703,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.938\n",
       "Method:                 Least Squares   F-statistic:                     22.15\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):             0.0438\n",
-      "Time:                        17:40:20   Log-Likelihood:                 9.8065\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):             0.0438\n",
+      "Time:                        18:43:30   Log-Likelihood:                 9.8065\n",
       "No. Observations:                   8   AIC:                            -7.613\n",
       "Df Residuals:                       2   BIC:                            -7.136\n",
       "Df Model:                           5                                         \n",
@@ -740,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -752,8 +757,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.938\n",
       "Method:                 Least Squares   F-statistic:                     22.15\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):             0.0438\n",
-      "Time:                        17:41:18   Log-Likelihood:                 9.8065\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):             0.0438\n",
+      "Time:                        18:43:30   Log-Likelihood:                 9.8065\n",
       "No. Observations:                   8   AIC:                            -7.613\n",
       "Df Residuals:                       2   BIC:                            -7.136\n",
       "Df Model:                           5                                         \n",
@@ -794,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -806,8 +811,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.938\n",
       "Method:                 Least Squares   F-statistic:                     22.15\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):             0.0438\n",
-      "Time:                        18:13:14   Log-Likelihood:                 9.8065\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):             0.0438\n",
+      "Time:                        18:43:30   Log-Likelihood:                 9.8065\n",
       "No. Observations:                   8   AIC:                            -7.613\n",
       "Df Residuals:                       2   BIC:                            -7.136\n",
       "Df Model:                           5                                         \n",
@@ -848,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -860,8 +865,8 @@
       "Dep. Variable:      spring_fawn_count   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.938\n",
       "Method:                 Least Squares   F-statistic:                     22.15\n",
-      "Date:                Tue, 03 Dec 2019   Prob (F-statistic):             0.0438\n",
-      "Time:                        17:42:06   Log-Likelihood:                 9.8065\n",
+      "Date:                Wed, 04 Dec 2019   Prob (F-statistic):             0.0438\n",
+      "Time:                        18:43:30   Log-Likelihood:                 9.8065\n",
       "No. Observations:                   8   AIC:                            -7.613\n",
       "Df Residuals:                       2   BIC:                            -7.136\n",
       "Df Model:                           5                                         \n",
@@ -957,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +975,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.901\n",
       "Method:                 Least Squares   F-statistic:                     11.59\n",
       "Date:                Wed, 04 Dec 2019   Prob (F-statistic):              0.221\n",
-      "Time:                        10:25:25   Log-Likelihood:                 10.702\n",
+      "Time:                        18:43:30   Log-Likelihood:                 10.702\n",
       "No. Observations:                   8   AIC:                            -7.405\n",
       "Df Residuals:                       1   BIC:                            -6.849\n",
       "Df Model:                           6                                         \n",
@@ -1020,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1038,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.901\n",
       "Method:                 Least Squares   F-statistic:                     11.59\n",
       "Date:                Wed, 04 Dec 2019   Prob (F-statistic):              0.221\n",
-      "Time:                        10:27:25   Log-Likelihood:                 10.702\n",
+      "Time:                        18:43:30   Log-Likelihood:                 10.702\n",
       "No. Observations:                   8   AIC:                            -7.405\n",
       "Df Residuals:                       1   BIC:                            -6.849\n",
       "Df Model:                           6                                         \n",
